--- a/Art_Gallery(CRM)/pom.xml
+++ b/Art_Gallery(CRM)/pom.xml
@@ -185,7 +185,11 @@
             <artifactId>annotations-java5</artifactId>
             <version>15.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
 
 
         <!--
